Fix pie chart tooltip flickering

--- a/src/ggrc-client/styles/modules/_audit-summary.scss
+++ b/src/ggrc-client/styles/modules/_audit-summary.scss
@@ -71,4 +71,8 @@
       }
     }
   }
+
+  svg > g > g:last-child {
+    pointer-events: none;
+  }
 }
